java with mongodb

--- a/SP-User10/src/main/resources/application.properties
+++ b/SP-User10/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jpaex?createDatabaseIfNotExist
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=Darshanbr2001@
+Access-Control-Allow-Origin: http://localhost:3000
 
 
 ##Spring Data JPA ##
